[project]
name = "rvc-beta"
version = "0.1.0"
description = "Retrieval-based Voice Conversion"
authors = [{ name = "lj1995" }]
license = { text = "MIT" }
requires-python = ">=3.10,<3.11"

dependencies = [
    # Core ML
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",

    # Audio processing
    "librosa==0.9.1",
    "pyworld==0.3.2",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "praat-parselmouth>=0.4.2",
    "resampy>=0.4.2",
    "audioread",
    "sounddevice",

    # ML/AI libraries
    "fairseq==0.12.2",
    "faiss-cpu==1.7.3",
    "torchcrepe==0.0.20",
    "torchfcpe",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "onnxruntime; sys_platform == 'darwin'",

    # Numerical computing
    "numpy==1.23.5",
    "scipy",
    "numba==0.56.4",
    "llvmlite==0.39.0",
    "scikit-learn",

    # Web/API
    "gradio==3.34.0",
    "gradio_client==0.2.7",
    "fastapi==0.88",
    "uvicorn>=0.21.1",
    "httpx",

    # GUI
    "FreeSimpleGUI",

    # Media processing
    "ffmpeg-python>=0.2.0",
    "ffmpy==0.3.1",
    "av",

    # Visualization
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "Pillow>=9.1.1",
    "tensorboard",
    "tensorboardX",

    # Utilities
    "Cython",
    "Jinja2>=3.1.2",
    "json5",
    "Markdown",
    "tqdm>=4.63.1",
    "tornado>=6.1",
    "Werkzeug>=2.2.3",
    "uc-micro-py>=1.0.1",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "PyYAML>=6.0",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "fsspec>=2022.11.0",
    "absl-py>=1.2.0",
    "colorama>=0.4.5",
    "python-dotenv>=1.0.0",
    "joblib>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
